--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,28 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  const animationClass = 'playing';
+  const keys = document.querySelectorAll('.key');
 
+  function playSound(event) {
+    const keyCode = event.keyCode;
+    const audio = document.querySelector(`audio[data-key="${keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${keyCode}"]`);
+
+    if (!audio) return;
+
+    key.classList.add(animationClass);
+    audio.currentTime = 0;
+    audio.play();
+  }
+
+  function removeTransition(event) {
+    if (event.propertyName !== 'transform') return;
+    event.target.classList.remove(animationClass);
+  }
+
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
 </script>
 
 
